Align pfp correctly

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -445,5 +445,5 @@ body {
 
 .pfp-img {
   margin-top: 4px;
-  margin-bottom: -3px;
+  margin-bottom: -2px;
 }
